[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "dict-picker"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "Fast key search in python"
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/sarvensis/dict-picker"

[tool.maturin]
sdist-include = ["LICENSE", "Readme.md"]
bindings = "cffi"
